# p2p_node_handshake

./: Cargo.toml  LICENSE  README.md  build.rs  local_ci.sh
poc/: Cargo.toml  simpleclient.rs
poc/res/: cert.pem  key.pem
src/: crypto_primitives.rs  handshake_sm.rs  ipfs.rs  main.rs  multistream.rs  qnd_sync.rs  sweet_noise.rs
src/ipfs/: multistream.rs  noise_handshake.rs
src/res/: BEP.proto  ipfs_noise_payloads.proto
src/sweet_noise/: crypto_primitives.rs  handshake_sm.rs  mod.rs
