[package]
name = "p2p_node_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: cleanup
anyhow = "1.0.72"
bytes = "1.4.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
libp2p = { version = "0.52.1", features = ["full"] }
libp2p-noise = "0.43.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
sha2 = "0.10.7"

# TODO: remove
snow = {version = "0.9.2", path = "../snow" }
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
prost-build = "0.11.9"
