[package]
name = "p2p_node_handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
futures-util = "0.3.28"
libp2p = { version = "0.52.1" }
log = "*"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
snow = "0.9.2"
tokio = { version = "1", features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.8", features = ["codec"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[build-dependencies]
prost-build = "0.11.9"
