[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[features]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
bytes = "1.4.0"
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
prost = "0.11.9"
rustls = { path = "../rustls", features = [ "logging", "dangerous_configuration" ]}
rustls-pemfile = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.25"

[dev-dependencies]
regex = "1.0"
ring = "0.16.20"

[build-dependencies]
prost-build="0.11.9"
